[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/blasters/Aspire.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/blasters/VacuumBlaster.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/sfx/vaccum-sfx.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Images/Blasters/vaccum.png" type="Texture2D" id=4]

[node name="Vacuum" type="Node2D"]
rotation = -1.5708
script = ExtResource( 2 )

[node name="Area2D" parent="." instance=ExtResource( 1 )]
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 4 )
region_rect = Rect2( 6, 87, 26, 24 )

[node name="TweenPos" type="Tween" parent="."]
playback_process_mode = 0

[node name="TweenScale" type="Tween" parent="."]
playback_process_mode = 0

[node name="TweenRotation" type="Tween" parent="."]
playback_process_mode = 0

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_completed" from="TweenScale" to="." method="_on_TweenScale_tween_completed"]
